hphp/hack/test/typecheck/reactive/mayberx6.php.exp
File "mayberx6.php", line 5, characters 38-53:
`<<__AtMostRxAsFunc>>` attribute can only be put on parameters of conditionally reactive functions or methods annotated with `<<__AtMostRxAsArgs>>` attribute. (NastCheck[3063])
